--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
                         <input type="number" step="0.01" id="alpha" name="alpha" value="0.5" />
                     </div>
                     <div class="param">
-                        <label>k (kernel radius)</label>
+                        <label>k (kernel size)</label>
                         <input type="number" step="1" id="kernel_size" name="kernel_size" value="15" />
                     </div>
                     <div class="param">
@@ -87,6 +87,7 @@
         const imageInput = document.getElementById("imageInput");
         const preview = document.getElementById("previewImage");
 
+        // Hiển thị preview khi chọn ảnh
         imageInput.addEventListener("change", () => {
             const file = imageInput.files[0];
             if (file) {
@@ -103,6 +104,7 @@
         const bilateralParams = document.getElementById("bilateralParams");
         const guidedParams = document.getElementById("guidedParams");
 
+        // Hiển thị tham số theo phương thức
         methodSelect.addEventListener("change", () => {
             originalParams.style.display = methodSelect.value === "default" ? "flex" : "none";
             bilateralParams.style.display = methodSelect.value === "bilateral" ? "flex" : "none";
@@ -129,7 +131,7 @@
                 formData.append("radius", document.getElementById("radius").value);
                 formData.append("eps", document.getElementById("eps").value);
             } else {
-                ["alpha", "kernel_radius", "iterations", "final_weight"].forEach(id => {
+                ["alpha", "kernel_size", "iterations", "final_weight"].forEach(id => {
                     const el = document.getElementById(id);
                     if (el && el.value !== "") formData.append(id, el.value);
                 });
@@ -148,18 +150,37 @@
 
                 const data = await res.json();
                 let html = `<div class="image-card"><h3>Original</h3><img src="${URL.createObjectURL(file)}"></div>`;
-                Object.entries(data.steps).forEach(([step, filename]) => {
-                    html += `<div class="image-card"><h3>${step}</h3><img src="http://127.0.0.1:5000/image/${filename}"></div>`;
-                });
+
+                if (method === "default") {
+                    // Thứ tự hiển thị cho phương thức gốc
+                    const displayOrder = ["mask", "diff", "Im", "final", "result"];
+                    displayOrder.forEach(step => {
+                        if (data.steps[step]) {
+                            html += `<div class="image-card"><h3>${step.charAt(0).toUpperCase() + step.slice(1)}</h3>
+                                    <img src="http://127.0.0.1:5000/image/${data.steps[step]}">
+                                 </div>`;
+                        }
+                    });
+                } else {
+                    // Các phương thức khác giữ nguyên thứ tự
+                    Object.entries(data.steps).forEach(([step, filename]) => {
+                        html += `<div class="image-card"><h3>${step.charAt(0).toUpperCase() + step.slice(1)}</h3>
+                                <img src="http://127.0.0.1:5000/image/${filename}">
+                             </div>`;
+                    });
+                }
+
                 html += `<div style="grid-column:1/-1;text-align:center;margin-top:8px;">
-                            <small>Params used: ${JSON.stringify(data.params_used)}</small>
-                         </div>`;
+                        <small>Params used: ${JSON.stringify(data.params_used)}</small>
+                     </div>`;
+
                 resultsDiv.innerHTML = html;
             } catch (err) {
                 resultsDiv.innerHTML = `<p style="color:red">Network error or server down: ${err.message}</p>`;
             }
         });
     </script>
+
 </body>
 
 </html>
